--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="utf-8">
-		<title>Bikcraft</title>
-		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<body>
-		
-	</body>
+
+<head>
+	<meta charset="utf-8">
+	<title>Bikcraft</title>
+	<link rel="stylesheet" href="./css/style.css">
+</head>
+
+<body>
+
+</body>
+
 </html>
