--- a/web/index.html
+++ b/web/index.html
@@ -5,10 +5,44 @@
 	<meta charset="utf-8">
 	<title>Bikcraft</title>
 	<link rel="stylesheet" href="./css/normalize.css">
+	<link rel="stylesheet" href="./css/reset.css">
+	<link rel="stylesheet" href="./css/grid.css">
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
+	<header class="header">
+		<div class="container">
+
+			<a href="index.html" class="grid-4">
+				<img src="./img/bikcraft.svg" alt="Logo bikcraft">
+			</a>
+
+			<nav class=" grid-12 header_menu">
+				<ul>
+					<li><a href="sobre.html">Sobre</a></li>
+					<li><a href="produto.html">Produto</a></li>
+					<li><a href="portfolio.html">Portfólio</a></li>
+					<li><a href="contato.html">Contato</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+
+	<section class="introducao">
+		<div class="container">
+			<h1>bicicletas feitas a mão</h1>
+			<blockquote class="quote-externo">
+				<p>"Não tenha nada na sua casa que você
+					não considere útil ou acredita ser bonito"</p>
+				<cite>William Morris</cite>
+			</blockquote>
+			<a href="produtos.html" class="btn">Orçamento</a>
+		</div>
+
+	</section>
+
+
 
 </body>
 
