--- a/web/index.html
+++ b/web/index.html
@@ -43,6 +43,39 @@
 	</section>
 
 
+	<section class=" produtos container">
+		<h2 class="subtitulo">Produtos</h2>
+		<ul class="produtos_lista">
+
+			<li class="grid-1-3">
+				<div class="produtos_icone">
+					<img src="./img/produtos/passeio.svg" alt="Bikcraft passeio">
+				</div>
+				<h3>Passeio</h3>
+				<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão </p>
+			</li>
+
+			<li class="grid-1-3">
+				<div class="produtos_icone">
+					<img src="./img/produtos/esporte.svg" alt="Bikcraft esporte">
+				</div>
+				<h3>Esporte</h3>
+				<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão </p>
+			</li>
+
+			<li class="grid-1-3">
+				<div class="produtos_icone">
+					<img src="./img/produtos/retro.svg" alt="Bikcraft retrô">
+				</div>
+				<h3>Retrô</h3>
+				<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão </p>
+			</li>
+
+		</ul>
+
+	</section>
+
+
 
 </body>
 
