--- a/web/index.html
+++ b/web/index.html
@@ -42,8 +42,7 @@
 
 	</section>
 
-
-	<section class=" produtos container">
+	<section class="produtos container">
 		<h2 class="subtitulo">Produtos</h2>
 		<ul class="produtos_lista">
 
@@ -73,9 +72,100 @@
 
 		</ul>
 
+		<div class="call">
+			<p>Clique aqui e veja detalhes dos nossos produtos</p>
+			<a href="produtos.html" class="btn btn-preto">Produtos</a>
+		</div>
 	</section>
 
+	<section class="portfolio">
+		<div class="container">
+			<h2 class="subtitulo">portfolio</h2>
+			<ul class="portfolio_lista">
+				<li class="grid-8"><img src="./img/portfolio/retro.jpg" alt="bicicleta retrô"></li>
+				<li class="grid-8"><img src="./img/portfolio/passeio.jpg" alt="bicicleta passeio"></li>
+				<li class="grid-16"><img src="./img/portfolio/esporte.jpg" alt="bicicleta esporte"></li>
+			</ul>
+			<div class="call">
+				<p>Conheça mais o nosso portfolio</p>
+				<a href="produtos.html" class="btn">Portfolio</a>
+			</div>
+		</div>
+	</section>
 
+	<section class="qualidade container">
+		<h2 class="subtitulo">Qualidade</h2>
+		<img src="./img/bikcraft-qualidade.svg" alt="Bikcraft">
+		<ul class="qualidade_lista">
+			<li class="grid-1-3">
+				<h3>Durabilidade</h3>
+				<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem</p>
+			</li>
+
+			<li class="grid-1-3">
+				<h3>Design</h3>
+				<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem</p>
+			</li>
+
+			<li class="grid-1-3">
+				<h3>Sustentabilidade</h3>
+				<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem</p>
+			</li>
+		</ul>
+
+		<div class="call">
+			<p>Conheça mais a história da bikcraft</p>
+			<a href="sobre.html" class="btn btn-preto">Sobre</a>
+		</div>
+
+	</section>
+
+	<section class="quebra">
+		<blockquote class="quote-externo container">
+			<p>"O verdadeiro segredo da felicidade está em ter genuíno interesse por todos os detalhes da vida cotidiana"</p>
+			<cite>William Morris</cite>
+		</blockquote>
+	</section>
+
+	<footer>
+		<div class="footer">
+			<div class="container">
+
+				<div class="grid-8 footer_historia">
+					<h3>Nossa história</h3>
+					<p>O verdadeiro segredo da felicidade esrá em ter um genuíno interesse por todos os detalhes da vida cotidiana.</p>
+				</div>
+
+				<div class="grid-4 footer_contato">
+					<h3>Contato</h3>
+					<ul>
+						<li>- 21 99999-9999 </li>
+						<li>- contato@gmail.com </li>
+						<li>- Botafogo-RJ </li>
+					</ul>
+				</div>
+
+				<div class="grid-4 footer_redes">
+					<h3>Redes sociais</h3>
+					<ul>
+						<li><a href="http://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg" alt="Facebook"></a> </li>
+
+						<li><a href="http://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="Instagram"></a></li>
+
+						<li> <a href="http://twitter.com" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="Twitter"></a></li>
+
+					</ul>
+				</div>
+			</div>
+		</div>
+
+		<div class="copy">
+			<div class="container">
+				<p class="grid-16">Bikcraft 2021 - Alguns direitos reservados</p>
+			</div>
+
+		</div>
+	</footer>
 
 </body>
 
