Adicionado animações de slides na página portfólio

--- a/web/portfolio.html
+++ b/web/portfolio.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="./css/style.css">
 	<link rel="stylesheet" href="./css/portfolio.css">
 	<link rel="stylesheet" href="./css/responsivo.css">
+	<script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
@@ -38,28 +39,41 @@
 		</div>
 	</section>
 
-	<section class="container">
+	<section class="container" data-slide="quote">
 		<blockquote class="quote_clientes">
 			<p>"No mundo atual, a contínua expansão da nossa
 				atividade cumpre um papel essencial na formulação da
 				gestão inovadora da qual fazemos parte"</p>
 			<cite>Barbara Moss</cite>
 		</blockquote>
+
+		<blockquote class="quote_clientes">
+			<p>"Nada melhor do que dar um rolê com a minha bikcraft na orla. Essa é minha companheira mas fiel, nunca me traiu e esta sempre a minha disposição"</p>
+			<cite>Jhonny rato</cite>
+		</blockquote>
+
+		<blockquote class="quote_clientes">
+			<p>"Comprem, comprem uma bicicleta na bikcraft imediatamente"</p>
+			<cite>Lula molusco bravo</cite>
+		</blockquote>
+
 	</section>
 
-
 	<section class="portfolio">
-		<div class="container">
+		<div class="container" data-slide="portfolio">
 			<ul class="portfolio_lista">
 				<li class="grid-8"><img src="./img/portfolio/retro.jpg" alt="bicicleta retrô"></li>
 				<li class="grid-8"><img src="./img/portfolio/passeio.jpg" alt="bicicleta passeio"></li>
 				<li class="grid-16"><img src="./img/portfolio/esporte.jpg" alt="bicicleta esporte"></li>
 			</ul>
+
+			<ul class="portfolio_lista">
+				<li class="grid-8"><img src="./img/portfolio/passeio.jpg" alt="bicicleta passeio"></li>
+				<li class="grid-8"><img src="./img/portfolio/retro.jpg" alt="bicicleta retrô"></li>
+				<li class="grid-16"><img src="./img/portfolio/esporte.jpg" alt="bicicleta esporte"></li>
+			</ul>
 		</div>
 	</section>
-
-
-
 
 	<section class="quebra">
 		<blockquote class="quote-externo container">
@@ -107,6 +121,9 @@
 
 		</div>
 	</footer>
+	<script src="./js/simple-slide.js"></script>
+	<script src="./js/script.js"></script>
+
 
 </body>
 
