--- a/web/index.html
+++ b/web/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="./css/grid.css">
 	<link rel="stylesheet" href="./css/style.css">
 	<link rel="stylesheet" href="./css/responsivo.css">
+	<script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
@@ -169,6 +170,9 @@
 		</div>
 	</footer>
 
+
+	<script src="./js/script.js"></script>
+	<script src="./js/simple-slide.js"></script>
 </body>
 
 </html>
