--- a/web/produtos.html
+++ b/web/produtos.html
@@ -108,20 +108,27 @@
 	<section class="orcamento">
 		<div class="container">
 			<h2 class="subtitulo">Orçamento</h2>
-			<form id="form_orcamento" class="grid-8 form">
+			<form id="form_orcamento" class="grid-8 form formphp" method="POST" action="./enviar-sendgrid.php">
+
 				<label for="nome">Nome</label>
-				<input type="text" id="nome">
+				<input type="text" id="nome" name="nome" rqeuired>
 
 				<label for="Email">Email</label>
-				<input type="text" id="email">
+				<input type="email" name="email" id="email" required>
 
 				<label for="telefone">Telefone</label>
-				<input type="text" id="telefone">
+				<input type="text" id="telefone" name="telefone">
 
-				<label for="espec">Especificações</label>
-				<textarea type="text" id="espec"></textarea>
+				<label class="nao-aparece">Se você não é um robô, deixe em branco.</label>
+				<input type="text" class="nao-aparece" name="leaveblank">
 
-				<button type="submit" class="btn">Enviar</button>
+				<label class="nao-aparece">Se você não é um robô, não mude esse campo.</label>
+				<input type="text" class="nao-aparece" name="dontchange" value="http://">
+
+				<label for="mensagem">Mensagem</label>
+				<textarea type="mensagem" id="mensagem" name="mensagem" required></textarea>
+
+				<button id="enviar" name="enviar" type="submit" class="btn">Enviar</button>
 			</form>
 
 			<div class="orcamento_dados grid-8">
@@ -143,6 +150,7 @@
 
 
 		<script src="./js/simple-anime.js"></script>
+		<script src="./js/simple-form.js"></script>
 		<script src="./js/script.js"></script>
 
 	</section>
