alterei texto do footer 'nossa história'

--- a/web/sobre.html
+++ b/web/sobre.html
@@ -63,9 +63,6 @@
 	</section>
 
 
-
-
-
 	<section class="qualidade container">
 		<h2 class="subtitulo">Qualidade</h2>
 		<img src="./img/bikcraft-qualidade.svg" alt="Bikcraft">
@@ -100,7 +97,7 @@
 
 				<div class="grid-8 footer_historia">
 					<h3 class="subtitulo-interno">Nossa história</h3>
-					<p>O verdadeiro segredo da felicidade esrá em ter um genuíno interesse por todos os detalhes da vida cotidiana.</p>
+					<p>Quando iniciamos a Bikcraft queriamos apenas um produto que adoraríamos utilizar. Eramos apaixonados por pedalar e também por fazer as coisas com as nossas próprias mãos. Assim surgiu um sonho na garagem da nossa casa.</p>
 				</div>
 
 				<div class="grid-4 footer_contato">
