--- a/web/sobre.html
+++ b/web/sobre.html
@@ -42,9 +42,9 @@
 	<section data-anime="1200" class="missao_sobre container fadeInDown">
 		<div class="grid-10">
 			<h2 class="subtitulo-interno">História, missão e visão</h2>
-			<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500.O</p>
+			<p>Quando iniciamos a Bikcraft queriamos apenas um produto que adoraríamos utilizar. Eramos apaixonados por pedalar e também por fazer as coisas com as nossas próprias mãos. Assim surgiu um sonho na garagem da nossa casa.</p>
 
-			<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500.O</p>
+			<p>Conheça os nossos produtos, pergunte para os nossos clientes e descubra a maravilha de ter uma Bikcraft na sua casa.</p>
 		</div>
 
 		<div class="grid-6">
@@ -69,17 +69,17 @@
 		<ul class="qualidade_lista">
 			<li class="grid-1-3">
 				<h3>Durabilidade</h3>
-				<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem</p>
+				<p>OSólida como pedra, leve como o vento e resistente como o diamante, são nossos diferenciais.</p>
 			</li>
 
 			<li class="grid-1-3">
 				<h3>Design</h3>
-				<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem</p>
+				<p>OFeitas sob medida para o melhor conforto e eficiência. Adaptamos a sua Bikcraft para o seu corpo.</p>
 			</li>
 
 			<li class="grid-1-3">
 				<h3>Sustentabilidade</h3>
-				<p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem</p>
+				<p>Além de ajudar a cuidar do meio ambiente, tirando carros da rua, toda a produção é sustentável.</p>
 			</li>
 		</ul>
 	</section>
