--- a/web/produtos.html
+++ b/web/produtos.html
@@ -51,7 +51,7 @@
 			<img src="./img/produtos/bikcraft-passeio-2.jpg" alt="Bikcraft Passeio">
 		</div>
 		<div class="grid-8 produto_info">
-			<p>O verdadeiro segredo da felicidade é ter um genuíno interesse por todos os detalhes da vida cotidiana. Interesse por todos os detalhes da vida cotidiana.</p>
+			<p>Muito melhor do que passear pela orla a vidros fechados. A Bikcraft Passeio é uma bicicleta que une conforto e praticidade para o seu dia a dia. Você nunca mais vai querer saber de outra.</p>
 			<ul>
 				<li>Conforto</li>
 				<li>Velocidade</li>
@@ -73,7 +73,7 @@
 			<img src="./img/produtos/bikcraft-esporte-2.jpg" alt="Bikcraft esporte">
 		</div>
 		<div class="grid-8 produto_info">
-			<p>O verdadeiro segredo da felicidade é ter um genuíno interesse por todos os detalhes da vida cotidiana. Interesse por todos os detalhes da vida cotidiana.</p>
+			<p>Mais rápida do que Forrest Gump, ninguém vai pegar você. A Bikcraft Esporte é uma bicicleta desenhada para a máxima performance. O seu desempenho supera qualquer uma da categoria</p>
 			<ul>
 				<li>Conforto</li>
 				<li>Velocidade</li>
@@ -95,7 +95,7 @@
 			<img src="./img/produtos/bikcraft-retro-2.jpg" alt="Bikcraft retro">
 		</div>
 		<div class="grid-8 produto_info">
-			<p>O verdadeiro segredo da felicidade é ter um genuíno interesse por todos os detalhes da vida cotidiana. Interesse por todos os detalhes da vida cotidiana.</p>
+			<p>O passado volta para lembrarmos o que devemos fazer no futuro. A Bikcraft Retrô é uma bicicleta estiloza, feita para você que gosta do clássico, mas que não abre mão do conforto.</p>
 			<ul>
 				<li>Conforto</li>
 				<li>Velocidade</li>
