Adicionado parte de SEO do site

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,17 @@
 <html lang="pt-br">
 
 <head>
-	<meta charset="utf-8">
+	<title>Bikctaf - Bicicletas Personalizadas</title>
+	<meta name="description" content="Compre a sua bicicleta personalizada na BikCraft. Possuimos modelos Passeio, Retrô e Esporte.">
+
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Bikctaf - Bicicletas Personalizadas">
+	<meta property="og:description" content="Compre a sua bicicleta personalizada na BikCraft. Possuimos modelos Passeio, Retrô e Esporte.">
+	<meta property="og:url" content="http://bikcraft.com">
+	<meta property="og:image" content="http/bikcraft.com/img/og-image.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="shortcut icon" href="favicon.ico" <meta charset="utf-8">
 	<title>Bikcraft</title>
 	<link rel="stylesheet" href="./css/normalize.css">
 	<link rel="stylesheet" href="./css/reset.css">
@@ -23,7 +33,7 @@
 			<nav class=" grid-12 header_menu">
 				<ul>
 					<li><a href="sobre.html">Sobre</a></li>
-					<li><a href="produtos.html">Produto</a></li>
+					<li><a href="produtos.html">Produtos</a></li>
 					<li><a href="portfolio.html">Portfólio</a></li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
