--- a/web/contato.html
+++ b/web/contato.html
@@ -3,7 +3,17 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Bikcraft - Contato</title>
+	<title>Bikcraft - Contato - 21 99999-9999</title>
+
+	<meta name="description" content="Compre a sua bicicleta personalizada na BikCraft. Possuimos modelos Passeio, Retrô e Esporte.">
+
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Bikcraft - Conheça o portfólio de clientes">
+	<meta property="og:description" content="Bikcraft - Contato - 21 99999-9999">
+	<meta property="og:url" content="http://bikcraft.com/contato.html">
+	<meta property="og:image" content="http/bikcraft.com/img/og-image.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link rel="stylesheet" href="./css/normalize.css">
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/grid.css">
@@ -24,7 +34,7 @@
 			<nav class=" grid-12 header_menu">
 				<ul>
 					<li><a href="sobre.html">Sobre</a></li>
-					<li><a href="produtos.html">Produto</a></li>
+					<li><a href="produtos.html">Produtos</a></li>
 					<li><a href="portfolio.html">Portfólio</a></li>
 					<li><a href="contato.html" class="menu_ativo	">Contato</a></li>
 				</ul>
