--- a/web/sobre.html
+++ b/web/sobre.html
@@ -2,8 +2,19 @@
 <html lang="pt-br">
 
 <head>
+
+
 	<meta charset="utf-8">
 	<title>Bikcraft - Sobre</title>
+	<meta name="description" content="Compre a sua bicicleta personalizada na BikCraft. Possuimos modelos Passeio, Retrô e Esporte.">
+
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="Bikctaf - Saiba mais sobre a bikcraft">
+	<meta property="og:description" content="Compre a sua bicicleta personalizada na BikCraft. Possuimos modelos Passeio, Retrô e Esporte.">
+	<meta property="og:url" content="http://bikcraft.com/sobre.html">
+	<meta property="og:image" content="http/bikcraft.com/img/og-image.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<link rel="stylesheet" href="./css/normalize.css">
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/grid.css">
@@ -24,7 +35,7 @@
 			<nav class=" grid-12 header_menu">
 				<ul>
 					<li><a href="sobre.html" class="menu_ativo	">Sobre</a></li>
-					<li><a href="produtos.html">Produto</a></li>
+					<li><a href="produtos.html">Produtos</a></li>
 					<li><a href="portfolio.html">Portfólio</a></li>
 					<li><a href="contato.html">Contato</a></li>
 				</ul>
