--- a/web/portfolio.html
+++ b/web/portfolio.html
@@ -14,13 +14,9 @@
 	<meta property="og:image" content="http/bikcraft.com/img/og-image.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="stylesheet" href="./css/normalize.css">
-	<link rel="stylesheet" href="./css/reset.css">
-	<link rel="stylesheet" href="./css/grid.css">
 	<link rel="stylesheet" href="./css/style.css">
-	<link rel="stylesheet" href="./css/portfolio.css">
-	<link rel="stylesheet" href="./css/responsivo.css">
 	<script>document.documentElement.classList.add("js");</script>
+
 </head>
 
 <body>
@@ -49,7 +45,7 @@
 		</div>
 	</section>
 
-	<section class="container fadeInDown" data-slide="quote" data-anime="1200">
+	<div class="container fadeInDown" data-slide="quote" data-anime="1200">
 		<blockquote class="quote_clientes">
 			<p>"No mundo atual, a contínua expansão da nossa
 				atividade cumpre um papel essencial na formulação da
@@ -67,9 +63,9 @@
 			<cite>Lula molusco bravo</cite>
 		</blockquote>
 
-	</section>
+	</div>
 
-	<section class="portfolio fadeInDown" data-anime="1600">
+	<div class="portfolio fadeInDown" data-anime="1600">
 		<div class="container" data-slide="portfolio">
 			<ul class="portfolio_lista">
 				<li class="grid-8"><img src="./img/portfolio/retro.jpg" alt="bicicleta retrô"></li>
@@ -83,14 +79,14 @@
 				<li class="grid-16"><img src="./img/portfolio/esporte.jpg" alt="bicicleta esporte"></li>
 			</ul>
 		</div>
-	</section>
+	</div>
 
-	<section class="quebra">
+	<div class="quebra">
 		<blockquote class="quote-externo container">
 			<p>"O verdadeiro segredo da felicidade está em ter genuíno interesse por todos os detalhes da vida cotidiana"</p>
 			<cite>William Morris</cite>
 		</blockquote>
-	</section>
+	</div>
 
 	<footer>
 		<div class="footer">
