--- a/web/index.html
+++ b/web/index.html
@@ -12,13 +12,9 @@
 	<meta property="og:image" content="http/bikcraft.com/img/og-image.png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link rel="shortcut icon" href="favicon.ico" <meta charset="utf-8">
-	<title>Bikcraft</title>
-	<link rel="stylesheet" href="./css/normalize.css">
-	<link rel="stylesheet" href="./css/reset.css">
-	<link rel="stylesheet" href="./css/grid.css">
+
 	<link rel="stylesheet" href="./css/style.css">
-	<link rel="stylesheet" href="./css/responsivo.css">
+
 	<script>document.documentElement.classList.add("js");</script>
 </head>
 
@@ -133,12 +129,12 @@
 
 	</section>
 
-	<section class="quebra">
+	<div class="quebra">
 		<blockquote class="quote-externo container">
 			<p>"O verdadeiro segredo da felicidade está em ter genuíno interesse por todos os detalhes da vida cotidiana"</p>
 			<cite>William Morris</cite>
 		</blockquote>
-	</section>
+	</div>
 
 	<footer>
 		<div class="footer">
